[FIX] account: Dashboard kanban style on groupby
When using a 'Group by' on the Accounting Dashboard, the Kanban cards representing the Journals are placed in columns. However, the columns were too narrow, causing text overflow.

task-3530756

--- a/addons/account/static/src/scss/account_journal_dashboard.scss
+++ b/addons/account/static/src/scss/account_journal_dashboard.scss
@@ -41,8 +41,7 @@
 
     .o_kanban_group {
         &:not(.o_column_folded) {
-            width: 450px + 2*$o-kanban-group-padding;
-
+            --KanbanGroup-width: 450px;
             @include media-breakpoint-down(md) {
                 width: 100%;
             }
